--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -1421,6 +1421,98 @@
  	 	 	 	}
  	 	 	}
  	 	},
+ 	 	"gang": {
+ 	 	 	"assignGangRankModal": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"playerName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Zuweisen Sie ${playerName} eine Bandenrang",
+ 	 	 	 	 	"eng": "Assign Gang Rank to ${playerName}"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"cost"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Das Zuweisen eines Bandenrangs kostet ${cost} BTC und erfordert Spielen Neustart, um die Änderung zu sehen",
+ 	 	 	 	 	"eng": "Assigning a gang rank will cost you ${cost} btc and require game restart to see the change"
+ 	 	 	 	},
+ 	 	 	 	"input": {
+ 	 	 	 	 	"label": {
+ 	 	 	 	 	 	"trans": "Rangname",
+ 	 	 	 	 	 	"eng": "Rank Name"
+ 	 	 	 	 	},
+ 	 	 	 	 	"error": {
+ 	 	 	 	 	 	"length": {
+ 	 	 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	 	 	"minLength",
+ 	 	 	 	 	 	 	 	"maxLength"
+ 	 	 	 	 	 	 	],
+ 	 	 	 	 	 	 	"trans": "Der Rangname muss zwischen ${minLength} und ${maxLength} Zeichen liegen",
+ 	 	 	 	 	 	 	"eng": "Rank name must be between ${minLength} and ${maxLength} characters"
+ 	 	 	 	 	 	}
+ 	 	 	 	 	}
+ 	 	 	 	},
+ 	 	 	 	"button": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "Zuordnen",
+ 	 	 	 	 	 	"eng": "Assign"
+ 	 	 	 	 	}
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"playerPopup": {
+ 	 	 	 	"viewProfile": {
+ 	 	 	 	 	"trans": "Profil anzeigen",
+ 	 	 	 	 	"eng": "View Profile"
+ 	 	 	 	},
+ 	 	 	 	"assignRank": {
+ 	 	 	 	 	"trans": "Rang zuweisen",
+ 	 	 	 	 	"eng": "Assign Rank"
+ 	 	 	 	},
+ 	 	 	 	"kickPlayer": {
+ 	 	 	 	 	"trans": "Spieler rauswerfen",
+ 	 	 	 	 	"eng": "kick player"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"confirmKickMember": {
+ 	 	 	 	"trans": "Bist du sicher, dass du diesen Spieler aus deiner Gang rauswerfen möchtest?",
+ 	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
+ 	 	 	},
+ 	 	 	"memberContribution": {
+ 	 	 	 	"resource": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"resourceContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${resourceContribution} Ressourcen",
+ 	 	 	 	 	"eng": "${resourceContribution} Resource"
+ 	 	 	 	},
+ 	 	 	 	"occupation": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"occupationContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${occupationContribution} Besetzungs-Punkte",
+ 	 	 	 	 	"eng": "${occupationContribution} occupation point"
+ 	 	 	 	},
+ 	 	 	 	"fund": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"moneyContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${moneyContribution} Finanzierung",
+ 	 	 	 	 	"eng": "${moneyContribution} funding"
+ 	 	 	 	},
+ 	 	 	 	"exp": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"expContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${expContribution} EXP",
+ 	 	 	 	 	"eng": "${expContribution} exp"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"deleteGang": {
+ 	 	 	 	"trans": "Gang löschen",
+ 	 	 	 	"eng": "Delete Gang"
+ 	 	 	}
+ 	 	},
  	 	"captcha": {
  	 	 	"title": {
  	 	 	 	"trans": "Gib das Systempasswort ein, um fortzufahren",
@@ -1603,56 +1695,6 @@
  	 	 	 	 	"trans": "Ich bin mir sicher",
  	 	 	 	 	"eng": "I am sure"
  	 	 	 	}
- 	 	 	}
- 	 	},
- 	 	"gang": {
- 	 	 	"playerPopup": {
- 	 	 	 	"viewProfile": {
- 	 	 	 	 	"trans": "Profil anzeigen",
- 	 	 	 	 	"eng": "View Profile"
- 	 	 	 	},
- 	 	 	 	"kickPlayer": {
- 	 	 	 	 	"trans": "Spieler rauswerfen",
- 	 	 	 	 	"eng": "kick player"
- 	 	 	 	}
- 	 	 	},
- 	 	 	"confirmKickMember": {
- 	 	 	 	"trans": "Bist du sicher, dass du diesen Spieler aus deiner Gang rauswerfen möchtest?",
- 	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
- 	 	 	},
- 	 	 	"memberContribution": {
- 	 	 	 	"resource": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"resourceContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${resourceContribution} Ressourcen",
- 	 	 	 	 	"eng": "${resourceContribution} Resource"
- 	 	 	 	},
- 	 	 	 	"occupation": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"occupationContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${occupationContribution} Besetzungs-Punkte",
- 	 	 	 	 	"eng": "${occupationContribution} occupation point"
- 	 	 	 	},
- 	 	 	 	"fund": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"moneyContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${moneyContribution} Finanzierung",
- 	 	 	 	 	"eng": "${moneyContribution} funding"
- 	 	 	 	},
- 	 	 	 	"exp": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"expContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${expContribution} EXP",
- 	 	 	 	 	"eng": "${expContribution} exp"
- 	 	 	 	}
- 	 	 	},
- 	 	 	"deleteGang": {
- 	 	 	 	"trans": "Gang löschen",
- 	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
  	 	"coupon": {
@@ -2118,6 +2160,10 @@
  	 	"tag": {
  	 	 	"trans": "Kürzel",
  	 	 	"eng": "Tag"
+ 	 	},
+ 	 	"gangRank": {
+ 	 	 	"trans": "Rang",
+ 	 	 	"eng": "Rank"
  	 	},
  	 	"statusEffect": {
  	 	 	"trans": "Status Effekte",
@@ -3548,6 +3594,16 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Injizierbare Nano-Maschinen, gebaut für den militärischen Gebrauch. Sie sind in der Lage Verletzungen in Kampfsituationen zu heilen.",
+ 	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
+ 	 	 	}
+ 	 	},
+ 	 	"healing11": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Prestige Nano Medic Bot",
+ 	 	 	 	"eng": "Prestige Nano Medic Bot"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Injizierbare Nano -Maschinen, die für die militärische Nutzung im Voraus dienen, in der Lage sind, Verletzungen in der Kampfsituation zu entfachen",
  	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
  	 	 	}
  	 	},
@@ -5680,6 +5736,34 @@
  	 	"newbieTip": {
  	 	 	"trans": "Du heilst nach einem Kampf im Dungeon nicht, deshalb denk daran Heilungsgegenstände mitzunehmen und zu verwenden.",
  	 	 	"eng": "You will not heal after each fight in dungeon, remember to use your healing items."
+ 	 	}
+ 	},
+ 	"gang": {
+ 	 	"permission": {
+ 	 	 	"invite": {
+ 	 	 	 	"trans": "Einladen",
+ 	 	 	 	"eng": "Invite",
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Laden Sie andere Spieler ein, sich Ihrer Bande anzuschließen.",
+ 	 	 	 	 	"eng": "Invite other players to join your gang."
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"kick": {
+ 	 	 	 	"trans": "Trete",
+ 	 	 	 	"eng": "Kick",
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Treten Sie andere Spieler aus Ihrer Bande.",
+ 	 	 	 	 	"eng": "Kick other players from your gang."
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"manage": {
+ 	 	 	 	"trans": "Verwalten",
+ 	 	 	 	"eng": "Manage",
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Erlauben Sie diesem Spieler, die Erlaubnis anderer Spieler zu verwalten",
+ 	 	 	 	 	"eng": "Allow this player to manage permission of other players"
+ 	 	 	 	}
+ 	 	 	}
  	 	}
  	},
  	"itemStack": {
