--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -1421,6 +1421,98 @@
  	 	 	 	}
  	 	 	}
  	 	},
+ 	 	"gang": {
+ 	 	 	"assignGangRankModal": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"playerName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Asignar rango de pandillas a ${playerName}",
+ 	 	 	 	 	"eng": "Assign Gang Rank to ${playerName}"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"cost"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Asignar un rango de pandilla le costará ${cost} BTC y requerirá reiniciar el juego para ver el cambio",
+ 	 	 	 	 	"eng": "Assigning a gang rank will cost you ${cost} btc and require game restart to see the change"
+ 	 	 	 	},
+ 	 	 	 	"input": {
+ 	 	 	 	 	"label": {
+ 	 	 	 	 	 	"trans": "Nombre de rango",
+ 	 	 	 	 	 	"eng": "Rank Name"
+ 	 	 	 	 	},
+ 	 	 	 	 	"error": {
+ 	 	 	 	 	 	"length": {
+ 	 	 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	 	 	"minLength",
+ 	 	 	 	 	 	 	 	"maxLength"
+ 	 	 	 	 	 	 	],
+ 	 	 	 	 	 	 	"trans": "El nombre de rango debe estar entre ${minLength} y ${maxLength} caracteres",
+ 	 	 	 	 	 	 	"eng": "Rank name must be between ${minLength} and ${maxLength} characters"
+ 	 	 	 	 	 	}
+ 	 	 	 	 	}
+ 	 	 	 	},
+ 	 	 	 	"button": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "Asignar",
+ 	 	 	 	 	 	"eng": "Assign"
+ 	 	 	 	 	}
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"playerPopup": {
+ 	 	 	 	"viewProfile": {
+ 	 	 	 	 	"trans": "Ver perfil",
+ 	 	 	 	 	"eng": "View Profile"
+ 	 	 	 	},
+ 	 	 	 	"assignRank": {
+ 	 	 	 	 	"trans": "Asignar rango",
+ 	 	 	 	 	"eng": "Assign Rank"
+ 	 	 	 	},
+ 	 	 	 	"kickPlayer": {
+ 	 	 	 	 	"trans": "jugador",
+ 	 	 	 	 	"eng": "kick player"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"confirmKickMember": {
+ 	 	 	 	"trans": "¿Estás seguro de que quieres echar a este jugador de tu Banda?",
+ 	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
+ 	 	 	},
+ 	 	 	"memberContribution": {
+ 	 	 	 	"resource": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"resourceContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${resourceContribution} Recurso",
+ 	 	 	 	 	"eng": "${resourceContribution} Resource"
+ 	 	 	 	},
+ 	 	 	 	"occupation": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"occupationContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Punto de ocupación de ${occupationContribution}",
+ 	 	 	 	 	"eng": "${occupationContribution} occupation point"
+ 	 	 	 	},
+ 	 	 	 	"fund": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"moneyContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${moneyContribution} Financiación",
+ 	 	 	 	 	"eng": "${moneyContribution} funding"
+ 	 	 	 	},
+ 	 	 	 	"exp": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"expContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${expContribution} exp",
+ 	 	 	 	 	"eng": "${expContribution} exp"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"deleteGang": {
+ 	 	 	 	"trans": "Eliminar pandilla",
+ 	 	 	 	"eng": "Delete Gang"
+ 	 	 	}
+ 	 	},
  	 	"captcha": {
  	 	 	"title": {
  	 	 	 	"trans": "Ingresar contraseña del sistema para continuar",
@@ -1603,56 +1695,6 @@
  	 	 	 	 	"trans": "Estoy seguro",
  	 	 	 	 	"eng": "I am sure"
  	 	 	 	}
- 	 	 	}
- 	 	},
- 	 	"gang": {
- 	 	 	"playerPopup": {
- 	 	 	 	"viewProfile": {
- 	 	 	 	 	"trans": "Ver perfil",
- 	 	 	 	 	"eng": "View Profile"
- 	 	 	 	},
- 	 	 	 	"kickPlayer": {
- 	 	 	 	 	"trans": "jugador",
- 	 	 	 	 	"eng": "kick player"
- 	 	 	 	}
- 	 	 	},
- 	 	 	"confirmKickMember": {
- 	 	 	 	"trans": "¿Estás seguro de que quieres echar a este jugador de tu Banda?",
- 	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
- 	 	 	},
- 	 	 	"memberContribution": {
- 	 	 	 	"resource": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"resourceContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${resourceContribution} Recurso",
- 	 	 	 	 	"eng": "${resourceContribution} Resource"
- 	 	 	 	},
- 	 	 	 	"occupation": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"occupationContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "Punto de ocupación de ${occupationContribution}",
- 	 	 	 	 	"eng": "${occupationContribution} occupation point"
- 	 	 	 	},
- 	 	 	 	"fund": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"moneyContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${moneyContribution} Financiación",
- 	 	 	 	 	"eng": "${moneyContribution} funding"
- 	 	 	 	},
- 	 	 	 	"exp": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"expContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${expContribution} exp",
- 	 	 	 	 	"eng": "${expContribution} exp"
- 	 	 	 	}
- 	 	 	},
- 	 	 	"deleteGang": {
- 	 	 	 	"trans": "Eliminar pandilla",
- 	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
  	 	"coupon": {
@@ -2118,6 +2160,10 @@
  	 	"tag": {
  	 	 	"trans": "Etiqueta",
  	 	 	"eng": "Tag"
+ 	 	},
+ 	 	"gangRank": {
+ 	 	 	"trans": "Rango",
+ 	 	 	"eng": "Rank"
  	 	},
  	 	"statusEffect": {
  	 	 	"trans": "Efectos de estado",
@@ -3548,6 +3594,16 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Nanomáquinas inyectables de calidad épica. Son capaces de curar heridas en combate.",
+ 	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
+ 	 	 	}
+ 	 	},
+ 	 	"healing11": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Bot de prestigio Nano Medic",
+ 	 	 	 	"eng": "Prestige Nano Medic Bot"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "nano máquinas inyectables que es para uso militar anticipado, capaz de parchear lesiones en situación de combate",
  	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
  	 	 	}
  	 	},
@@ -5680,6 +5736,34 @@
  	 	"newbieTip": {
  	 	 	"trans": "No tecurarás después de cada pelea en la mazmorra, recuerda usar tus objetos curativos.",
  	 	 	"eng": "You will not heal after each fight in dungeon, remember to use your healing items."
+ 	 	}
+ 	},
+ 	"gang": {
+ 	 	"permission": {
+ 	 	 	"invite": {
+ 	 	 	 	"trans": "Invitar",
+ 	 	 	 	"eng": "Invite",
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Invite a otros jugadores a unirse a su pandilla.",
+ 	 	 	 	 	"eng": "Invite other players to join your gang."
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"kick": {
+ 	 	 	 	"trans": "Patada",
+ 	 	 	 	"eng": "Kick",
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Patea a otros jugadores de tu pandilla.",
+ 	 	 	 	 	"eng": "Kick other players from your gang."
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"manage": {
+ 	 	 	 	"trans": "Administrar",
+ 	 	 	 	"eng": "Manage",
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Permita que este jugador administre el permiso de otros jugadores",
+ 	 	 	 	 	"eng": "Allow this player to manage permission of other players"
+ 	 	 	 	}
+ 	 	 	}
  	 	}
  	},
  	"itemStack": {
