--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -1421,6 +1421,98 @@
  	 	 	 	}
  	 	 	}
  	 	},
+ 	 	"gang": {
+ 	 	 	"assignGangRankModal": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"playerName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "갱 순위를 ${playerName}에 할당",
+ 	 	 	 	 	"eng": "Assign Gang Rank to ${playerName}"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"cost"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "갱 순위를 할당하는 것은 ${cost} btc의 비용이 들며 변경 사항을 확인하려면 게임 재시작이 필요합니다",
+ 	 	 	 	 	"eng": "Assigning a gang rank will cost you ${cost} btc and require game restart to see the change"
+ 	 	 	 	},
+ 	 	 	 	"input": {
+ 	 	 	 	 	"label": {
+ 	 	 	 	 	 	"trans": "순위 이름",
+ 	 	 	 	 	 	"eng": "Rank Name"
+ 	 	 	 	 	},
+ 	 	 	 	 	"error": {
+ 	 	 	 	 	 	"length": {
+ 	 	 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	 	 	"minLength",
+ 	 	 	 	 	 	 	 	"maxLength"
+ 	 	 	 	 	 	 	],
+ 	 	 	 	 	 	 	"trans": "순위 이름은 ${minLength}과 ${maxLength} 문자 사이 여야합니다",
+ 	 	 	 	 	 	 	"eng": "Rank name must be between ${minLength} and ${maxLength} characters"
+ 	 	 	 	 	 	}
+ 	 	 	 	 	}
+ 	 	 	 	},
+ 	 	 	 	"button": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "양수인",
+ 	 	 	 	 	 	"eng": "Assign"
+ 	 	 	 	 	}
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"playerPopup": {
+ 	 	 	 	"viewProfile": {
+ 	 	 	 	 	"trans": "프로필보기",
+ 	 	 	 	 	"eng": "View Profile"
+ 	 	 	 	},
+ 	 	 	 	"assignRank": {
+ 	 	 	 	 	"trans": "순위를 할당하십시오",
+ 	 	 	 	 	"eng": "Assign Rank"
+ 	 	 	 	},
+ 	 	 	 	"kickPlayer": {
+ 	 	 	 	 	"trans": "킥 플레이어",
+ 	 	 	 	 	"eng": "kick player"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"confirmKickMember": {
+ 	 	 	 	"trans": "당신의 갱단에서 이 플레이어를 추방하시겠습니까?",
+ 	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
+ 	 	 	},
+ 	 	 	"memberContribution": {
+ 	 	 	 	"resource": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"resourceContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${resourceContribution} 자원",
+ 	 	 	 	 	"eng": "${resourceContribution} Resource"
+ 	 	 	 	},
+ 	 	 	 	"occupation": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"occupationContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${occupationContribution} 점령 포인트",
+ 	 	 	 	 	"eng": "${occupationContribution} occupation point"
+ 	 	 	 	},
+ 	 	 	 	"fund": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"moneyContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${moneyContribution} 자금",
+ 	 	 	 	 	"eng": "${moneyContribution} funding"
+ 	 	 	 	},
+ 	 	 	 	"exp": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"expContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${expContribution} 경험치",
+ 	 	 	 	 	"eng": "${expContribution} exp"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"deleteGang": {
+ 	 	 	 	"trans": "갱 삭제",
+ 	 	 	 	"eng": "Delete Gang"
+ 	 	 	}
+ 	 	},
  	 	"captcha": {
  	 	 	"title": {
  	 	 	 	"trans": "계속하려면 시스템 암호를 입력하세요",
@@ -1603,56 +1695,6 @@
  	 	 	 	 	"trans": "네, 확실합니다",
  	 	 	 	 	"eng": "I am sure"
  	 	 	 	}
- 	 	 	}
- 	 	},
- 	 	"gang": {
- 	 	 	"playerPopup": {
- 	 	 	 	"viewProfile": {
- 	 	 	 	 	"trans": "프로필보기",
- 	 	 	 	 	"eng": "View Profile"
- 	 	 	 	},
- 	 	 	 	"kickPlayer": {
- 	 	 	 	 	"trans": "킥 플레이어",
- 	 	 	 	 	"eng": "kick player"
- 	 	 	 	}
- 	 	 	},
- 	 	 	"confirmKickMember": {
- 	 	 	 	"trans": "당신의 갱단에서 이 플레이어를 추방하시겠습니까?",
- 	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
- 	 	 	},
- 	 	 	"memberContribution": {
- 	 	 	 	"resource": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"resourceContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${resourceContribution} 자원",
- 	 	 	 	 	"eng": "${resourceContribution} Resource"
- 	 	 	 	},
- 	 	 	 	"occupation": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"occupationContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${occupationContribution} 점령 포인트",
- 	 	 	 	 	"eng": "${occupationContribution} occupation point"
- 	 	 	 	},
- 	 	 	 	"fund": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"moneyContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${moneyContribution} 자금",
- 	 	 	 	 	"eng": "${moneyContribution} funding"
- 	 	 	 	},
- 	 	 	 	"exp": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"expContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${expContribution} 경험치",
- 	 	 	 	 	"eng": "${expContribution} exp"
- 	 	 	 	}
- 	 	 	},
- 	 	 	"deleteGang": {
- 	 	 	 	"trans": "갱 삭제",
- 	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
  	 	"coupon": {
@@ -2118,6 +2160,10 @@
  	 	"tag": {
  	 	 	"trans": "태그",
  	 	 	"eng": "Tag"
+ 	 	},
+ 	 	"gangRank": {
+ 	 	 	"trans": "계급",
+ 	 	 	"eng": "Rank"
  	 	},
  	 	"statusEffect": {
  	 	 	"trans": "상태 효과",
@@ -3548,6 +3594,16 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "전투 상황에서의 피해를 회복할 수 있는 첨단 군사용 주사식 나노 기계, 전투 상황에서 부상을 치료하는 것에 쓰입니다.",
+ 	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
+ 	 	 	}
+ 	 	},
+ 	 	"healing11": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "명성 나노 의료용 봇",
+ 	 	 	 	"eng": "Prestige Nano Medic Bot"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "전투 상황에서 부상을 패치 할 수있는 사전 군사 사용을위한 주사 가능한 나노 기계",
  	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
  	 	 	}
  	 	},
@@ -5789,6 +5845,34 @@
  	 	"newbieTip": {
  	 	 	"trans": "던전에서의 전투 이후, 체력은 자동으로 채워지지 않습니다. 회복 아이템을 사용하는 것을 잊지 마십시오.",
  	 	 	"eng": "You will not heal after each fight in dungeon, remember to use your healing items."
+ 	 	}
+ 	},
+ 	"gang": {
+ 	 	"permission": {
+ 	 	 	"invite": {
+ 	 	 	 	"trans": "초대",
+ 	 	 	 	"eng": "Invite",
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "다른 선수들에게 당신의 갱에 초대하십시오.",
+ 	 	 	 	 	"eng": "Invite other players to join your gang."
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"kick": {
+ 	 	 	 	"trans": "발 차기",
+ 	 	 	 	"eng": "Kick",
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "당신의 갱에서 다른 선수들을 걷어차십시오.",
+ 	 	 	 	 	"eng": "Kick other players from your gang."
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"manage": {
+ 	 	 	 	"trans": "관리하다",
+ 	 	 	 	"eng": "Manage",
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "이 플레이어가 다른 플레이어의 허가를 관리하도록 허용하십시오",
+ 	 	 	 	 	"eng": "Allow this player to manage permission of other players"
+ 	 	 	 	}
+ 	 	 	}
  	 	}
  	},
  	"itemStack": {
