--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -1421,6 +1421,98 @@
  	 	 	 	}
  	 	 	}
  	 	},
+ 	 	"gang": {
+ 	 	 	"assignGangRankModal": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"playerName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Назначьте банд раннг ${playerName}",
+ 	 	 	 	 	"eng": "Assign Gang Rank to ${playerName}"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"cost"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Присвоение бандитского ранга обойдется вам ${cost} BTC и потребует перезагрузки игры, чтобы увидеть изменение",
+ 	 	 	 	 	"eng": "Assigning a gang rank will cost you ${cost} btc and require game restart to see the change"
+ 	 	 	 	},
+ 	 	 	 	"input": {
+ 	 	 	 	 	"label": {
+ 	 	 	 	 	 	"trans": "Ранга названия",
+ 	 	 	 	 	 	"eng": "Rank Name"
+ 	 	 	 	 	},
+ 	 	 	 	 	"error": {
+ 	 	 	 	 	 	"length": {
+ 	 	 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	 	 	"minLength",
+ 	 	 	 	 	 	 	 	"maxLength"
+ 	 	 	 	 	 	 	],
+ 	 	 	 	 	 	 	"trans": "Имя ранга должно быть между ${minLength} и ${maxLength} символами",
+ 	 	 	 	 	 	 	"eng": "Rank name must be between ${minLength} and ${maxLength} characters"
+ 	 	 	 	 	 	}
+ 	 	 	 	 	}
+ 	 	 	 	},
+ 	 	 	 	"button": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "Назначать",
+ 	 	 	 	 	 	"eng": "Assign"
+ 	 	 	 	 	}
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"playerPopup": {
+ 	 	 	 	"viewProfile": {
+ 	 	 	 	 	"trans": "Просмотреть профиль",
+ 	 	 	 	 	"eng": "View Profile"
+ 	 	 	 	},
+ 	 	 	 	"assignRank": {
+ 	 	 	 	 	"trans": "Назначить ранги",
+ 	 	 	 	 	"eng": "Assign Rank"
+ 	 	 	 	},
+ 	 	 	 	"kickPlayer": {
+ 	 	 	 	 	"trans": "Удар игрок",
+ 	 	 	 	 	"eng": "kick player"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"confirmKickMember": {
+ 	 	 	 	"trans": "Вы уверены, что хотите выгнать этого игрока из вашей банды?",
+ 	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
+ 	 	 	},
+ 	 	 	"memberContribution": {
+ 	 	 	 	"resource": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"resourceContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${resourceContribution} ресурса",
+ 	 	 	 	 	"eng": "${resourceContribution} Resource"
+ 	 	 	 	},
+ 	 	 	 	"occupation": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"occupationContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${occupationContribution} очков контроля",
+ 	 	 	 	 	"eng": "${occupationContribution} occupation point"
+ 	 	 	 	},
+ 	 	 	 	"fund": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"moneyContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${moneyContribution} финансирования",
+ 	 	 	 	 	"eng": "${moneyContribution} funding"
+ 	 	 	 	},
+ 	 	 	 	"exp": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"expContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${expContribution} опыта",
+ 	 	 	 	 	"eng": "${expContribution} exp"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"deleteGang": {
+ 	 	 	 	"trans": "Удалить банду",
+ 	 	 	 	"eng": "Delete Gang"
+ 	 	 	}
+ 	 	},
  	 	"captcha": {
  	 	 	"title": {
  	 	 	 	"trans": "Введите системный код для продолжения",
@@ -1603,56 +1695,6 @@
  	 	 	 	 	"trans": "Я уверен",
  	 	 	 	 	"eng": "I am sure"
  	 	 	 	}
- 	 	 	}
- 	 	},
- 	 	"gang": {
- 	 	 	"playerPopup": {
- 	 	 	 	"viewProfile": {
- 	 	 	 	 	"trans": "Просмотреть профиль",
- 	 	 	 	 	"eng": "View Profile"
- 	 	 	 	},
- 	 	 	 	"kickPlayer": {
- 	 	 	 	 	"trans": "Удар игрок",
- 	 	 	 	 	"eng": "kick player"
- 	 	 	 	}
- 	 	 	},
- 	 	 	"confirmKickMember": {
- 	 	 	 	"trans": "Вы уверены, что хотите выгнать этого игрока из вашей банды?",
- 	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
- 	 	 	},
- 	 	 	"memberContribution": {
- 	 	 	 	"resource": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"resourceContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${resourceContribution} ресурса",
- 	 	 	 	 	"eng": "${resourceContribution} Resource"
- 	 	 	 	},
- 	 	 	 	"occupation": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"occupationContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${occupationContribution} очков контроля",
- 	 	 	 	 	"eng": "${occupationContribution} occupation point"
- 	 	 	 	},
- 	 	 	 	"fund": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"moneyContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${moneyContribution} финансирования",
- 	 	 	 	 	"eng": "${moneyContribution} funding"
- 	 	 	 	},
- 	 	 	 	"exp": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"expContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${expContribution} опыта",
- 	 	 	 	 	"eng": "${expContribution} exp"
- 	 	 	 	}
- 	 	 	},
- 	 	 	"deleteGang": {
- 	 	 	 	"trans": "Удалить банду",
- 	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
  	 	"coupon": {
@@ -2118,6 +2160,10 @@
  	 	"tag": {
  	 	 	"trans": "Метка",
  	 	 	"eng": "Tag"
+ 	 	},
+ 	 	"gangRank": {
+ 	 	 	"trans": "Классифицировать",
+ 	 	 	"eng": "Rank"
  	 	},
  	 	"statusEffect": {
  	 	 	"trans": "Эффекты",
@@ -3548,6 +3594,16 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Инъекционные нано-машины, предназначенные для применения в армии, способные исцелять раны в боевой обстановке",
+ 	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
+ 	 	 	}
+ 	 	},
+ 	 	"healing11": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Prestige Nano Medic Bot",
+ 	 	 	 	"eng": "Prestige Nano Medic Bot"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "инъекционные нано -машины, которые предназначены для предварительного использования военного, способного исправить травмы в боевой ситуации",
  	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
  	 	 	}
  	 	},
@@ -5680,6 +5736,34 @@
  	 	"newbieTip": {
  	 	 	"trans": "Ты не будешь исцеляться после каждого боя в подземелье, не забывай использовать медикаменты.",
  	 	 	"eng": "You will not heal after each fight in dungeon, remember to use your healing items."
+ 	 	}
+ 	},
+ 	"gang": {
+ 	 	"permission": {
+ 	 	 	"invite": {
+ 	 	 	 	"trans": "Приглашать",
+ 	 	 	 	"eng": "Invite",
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Пригласите других игроков присоединиться к вашей банде.",
+ 	 	 	 	 	"eng": "Invite other players to join your gang."
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"kick": {
+ 	 	 	 	"trans": "Пинать",
+ 	 	 	 	"eng": "Kick",
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Наденьте других игроков из вашей банды.",
+ 	 	 	 	 	"eng": "Kick other players from your gang."
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"manage": {
+ 	 	 	 	"trans": "Управлять",
+ 	 	 	 	"eng": "Manage",
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Позвольте этому игроку управлять разрешением других игроков",
+ 	 	 	 	 	"eng": "Allow this player to manage permission of other players"
+ 	 	 	 	}
+ 	 	 	}
  	 	}
  	},
  	"itemStack": {
