--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -1421,6 +1421,98 @@
  	 	 	 	}
  	 	 	}
  	 	},
+ 	 	"gang": {
+ 	 	 	"assignGangRankModal": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"playerName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Attribuer un rang de gang à ${playerName}",
+ 	 	 	 	 	"eng": "Assign Gang Rank to ${playerName}"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"cost"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "L'attribution d'un rang de gang vous coûtera ${cost} btc et nécessitera un redémarrage du jeu pour voir le changement",
+ 	 	 	 	 	"eng": "Assigning a gang rank will cost you ${cost} btc and require game restart to see the change"
+ 	 	 	 	},
+ 	 	 	 	"input": {
+ 	 	 	 	 	"label": {
+ 	 	 	 	 	 	"trans": "Nom de grade",
+ 	 	 	 	 	 	"eng": "Rank Name"
+ 	 	 	 	 	},
+ 	 	 	 	 	"error": {
+ 	 	 	 	 	 	"length": {
+ 	 	 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	 	 	"minLength",
+ 	 	 	 	 	 	 	 	"maxLength"
+ 	 	 	 	 	 	 	],
+ 	 	 	 	 	 	 	"trans": "Le nom de rang doit être entre ${minLength} et ${maxLength} caractères",
+ 	 	 	 	 	 	 	"eng": "Rank name must be between ${minLength} and ${maxLength} characters"
+ 	 	 	 	 	 	}
+ 	 	 	 	 	}
+ 	 	 	 	},
+ 	 	 	 	"button": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "Attribuer",
+ 	 	 	 	 	 	"eng": "Assign"
+ 	 	 	 	 	}
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"playerPopup": {
+ 	 	 	 	"viewProfile": {
+ 	 	 	 	 	"trans": "Voir le profil",
+ 	 	 	 	 	"eng": "View Profile"
+ 	 	 	 	},
+ 	 	 	 	"assignRank": {
+ 	 	 	 	 	"trans": "Attribuer un rang",
+ 	 	 	 	 	"eng": "Assign Rank"
+ 	 	 	 	},
+ 	 	 	 	"kickPlayer": {
+ 	 	 	 	 	"trans": "coup de pied",
+ 	 	 	 	 	"eng": "kick player"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"confirmKickMember": {
+ 	 	 	 	"trans": "Es-tu sûr de vouloir exclure ce joueur de ton gang ?",
+ 	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
+ 	 	 	},
+ 	 	 	"memberContribution": {
+ 	 	 	 	"resource": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"resourceContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${resourceContribution} Ressource",
+ 	 	 	 	 	"eng": "${resourceContribution} Resource"
+ 	 	 	 	},
+ 	 	 	 	"occupation": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"occupationContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${occupationContribution} Point d'occupation",
+ 	 	 	 	 	"eng": "${occupationContribution} occupation point"
+ 	 	 	 	},
+ 	 	 	 	"fund": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"moneyContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${moneyContribution} Financement",
+ 	 	 	 	 	"eng": "${moneyContribution} funding"
+ 	 	 	 	},
+ 	 	 	 	"exp": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"expContribution"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${expContribution} exp",
+ 	 	 	 	 	"eng": "${expContribution} exp"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"deleteGang": {
+ 	 	 	 	"trans": "Supprimer un gang",
+ 	 	 	 	"eng": "Delete Gang"
+ 	 	 	}
+ 	 	},
  	 	"captcha": {
  	 	 	"title": {
  	 	 	 	"trans": "Entre le mot de passe du système pour continuer",
@@ -1603,56 +1695,6 @@
  	 	 	 	 	"trans": "Je suis sûr",
  	 	 	 	 	"eng": "I am sure"
  	 	 	 	}
- 	 	 	}
- 	 	},
- 	 	"gang": {
- 	 	 	"playerPopup": {
- 	 	 	 	"viewProfile": {
- 	 	 	 	 	"trans": "Voir le profil",
- 	 	 	 	 	"eng": "View Profile"
- 	 	 	 	},
- 	 	 	 	"kickPlayer": {
- 	 	 	 	 	"trans": "coup de pied",
- 	 	 	 	 	"eng": "kick player"
- 	 	 	 	}
- 	 	 	},
- 	 	 	"confirmKickMember": {
- 	 	 	 	"trans": "Es-tu sûr de vouloir exclure ce joueur de ton gang ?",
- 	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
- 	 	 	},
- 	 	 	"memberContribution": {
- 	 	 	 	"resource": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"resourceContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${resourceContribution} Ressource",
- 	 	 	 	 	"eng": "${resourceContribution} Resource"
- 	 	 	 	},
- 	 	 	 	"occupation": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"occupationContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${occupationContribution} Point d'occupation",
- 	 	 	 	 	"eng": "${occupationContribution} occupation point"
- 	 	 	 	},
- 	 	 	 	"fund": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"moneyContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${moneyContribution} Financement",
- 	 	 	 	 	"eng": "${moneyContribution} funding"
- 	 	 	 	},
- 	 	 	 	"exp": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"expContribution"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "${expContribution} exp",
- 	 	 	 	 	"eng": "${expContribution} exp"
- 	 	 	 	}
- 	 	 	},
- 	 	 	"deleteGang": {
- 	 	 	 	"trans": "Supprimer un gang",
- 	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
  	 	"coupon": {
@@ -2118,6 +2160,10 @@
  	 	"tag": {
  	 	 	"trans": "Étiquette",
  	 	 	"eng": "Tag"
+ 	 	},
+ 	 	"gangRank": {
+ 	 	 	"trans": "Rang",
+ 	 	 	"eng": "Rank"
  	 	},
  	 	"statusEffect": {
  	 	 	"trans": "Effets de statut",
@@ -3548,6 +3594,16 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Des nano-machines injectables destinées à un usage militaire avancé, capables de panser des blessures en situation de combat",
+ 	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
+ 	 	 	}
+ 	 	},
+ 	 	"healing11": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Prestige nano medic bot",
+ 	 	 	 	"eng": "Prestige Nano Medic Bot"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Nano machines injectables pour une utilisation militaire préalable, capable de corriger les blessures dans la situation de combat",
  	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
  	 	 	}
  	 	},
@@ -5680,6 +5736,34 @@
  	 	"newbieTip": {
  	 	 	"trans": "Tu ne guérireas pas après chaque combat dans le donjon, n'oublie pas d'utiliser tes objets de guérison.",
  	 	 	"eng": "You will not heal after each fight in dungeon, remember to use your healing items."
+ 	 	}
+ 	},
+ 	"gang": {
+ 	 	"permission": {
+ 	 	 	"invite": {
+ 	 	 	 	"trans": "Inviter",
+ 	 	 	 	"eng": "Invite",
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Invitez d'autres joueurs à rejoindre votre gang.",
+ 	 	 	 	 	"eng": "Invite other players to join your gang."
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"kick": {
+ 	 	 	 	"trans": "Donner un coup",
+ 	 	 	 	"eng": "Kick",
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Donne un coup de pied à d'autres joueurs de votre gang.",
+ 	 	 	 	 	"eng": "Kick other players from your gang."
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"manage": {
+ 	 	 	 	"trans": "Faire en sorte",
+ 	 	 	 	"eng": "Manage",
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Permettez à ce joueur de gérer la permission des autres joueurs",
+ 	 	 	 	 	"eng": "Allow this player to manage permission of other players"
+ 	 	 	 	}
+ 	 	 	}
  	 	}
  	},
  	"itemStack": {
